removed the default 'edit profile', 'edit preferences' headings because they were partially obscured by the matches and messages buttons, and moved the headings into the forms themselves

--- a/roomie/app/views/preferences/_form.html.erb
+++ b/roomie/app/views/preferences/_form.html.erb
@@ -31,6 +31,8 @@
       <div class="actions" style="float:right; margin-top:-25px; margin-right:-25px;">
         <%= link_to "X", home_index_path, {:class=>"btn btn-default"} %>
       </div>
+      <h1><center>Preferences</center></h1>
+      <br>
       <% if preferences.errors.any? %>
           <div id="error_explanation">
             <h2><%= pluralize(preferences.errors.count, "error") %> prohibited these preferences from being saved:</h2>
