modified preferences and profile form and views, removed 'back' links and moved 'show' links into the div

--- a/roomie/app/views/preferences/_form.html.erb
+++ b/roomie/app/views/preferences/_form.html.erb
@@ -119,7 +119,9 @@
       <% if @preferences.street? %>
           <%= image_tag "http://maps.googleapis.com/maps/api/staticmap?size=450x300&sensor=false&zoom=16&markers=#{@preferences.latitude}%2C#{@preferences.longitude}&key=AIzaSyD21LGyl1gmCSllj3pjilRZaALCO5ZaA_0" %>
       <% end %>
-
+      <br>
+      <% if @preferences != nil %>
+        <%= link_to 'Show', user_preferences_path(@user, @preferences) %>
+      <% end %>
   <% end %>
 </div>
-
