--- a/roomie/app/views/profiles/show.html.erb
+++ b/roomie/app/views/profiles/show.html.erb
@@ -1,6 +1,5 @@
+<br><br><br><br>
 <div id="jumbo1" class="jumbotron">
-
-
   <p id="notice"><%= notice %></p>
 
   <p>
@@ -59,10 +58,8 @@
   </p>
 
 <% if @profile != nil %>
-  <%= link_to 'Edit', edit_user_profile_path(@user,@profile) %> |
-  <%= link_to 'Back', user_profile_path(@user, @profile) %>
+  <%= link_to 'Edit', edit_user_profile_path(@user,@profile) %>
 <% else %>
-  <%= link_to 'Edit', new_user_profile_path(@user,@profile) %> |
-  <%= link_to 'Back', user_profile_path(@user, @profile) %>
+  <%= link_to 'Edit', new_user_profile_path(@user,@profile) %>
 <% end %>
 </div>
