modified edit account page so headings show up in div so they are easier to see (blended into background picture before)

--- a/roomie/app/views/devise/registrations/edit.html.erb
+++ b/roomie/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="authform">
-  <h3>Edit <%= resource_name.to_s.humanize %></h3>
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
+    <h3>Edit Account</h3>
     <%= devise_error_messages! %>
     <div class="form-group">
       <%= f.label :email %>
@@ -31,7 +31,9 @@
   <% end %>
 </div>
 <div class="authform">
-<h3>Cancel Account</h3>
-<p>Unhappy? We'll be sad to see you go.</p>
-<%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button right' %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
+  <h3>Cancel Account</h3>
+  <p>Unhappy? We'll be sad to see you go.</p>
+  <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button right' %>
+<% end %>
 </div>
