display gender key based on value in Show view for prof and pref

--- a/roomie/app/views/preferences/show.html.erb
+++ b/roomie/app/views/preferences/show.html.erb
@@ -4,7 +4,7 @@
 
 <p>
   <strong>Gender:</strong>
-  <%= @preferences ? @preferences.gender : ""%>
+  <%= @preferences ? Preferences.preferencesGender.key(@preferences.gender) : ""%>
 </p>
 
 <p>
