profile Show was showing Preferences' Show

--- a/roomie/app/views/profiles/_form.html.erb
+++ b/roomie/app/views/profiles/_form.html.erb
@@ -158,7 +158,7 @@
       <% end %>
       <br>
       <% if @profile != nil %>
-        <%= link_to 'Show', user_preferences_path(@user, @preferences) %>
+        <%= link_to 'Show', user_profile_path(@user, @pprofile) %>
       <% end %>
   <% end %>
 </div>
